# indi-engine

./: .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
config/: engine_b.yaml  engine_b_id.txt  engine_id.txt  main.yaml
data/frames/: 0907bd3a-810a-4e6d-885a-7c7edd1501f3.fits  0907bd3a-810a-4e6d-885a-7c7edd1501f3.json  13c43b42-eba2-4ed8-be6c-60c2710076e3.fits  13c43b42-eba2-4ed8-be6c-60c2710076e3.json  14022043-f0c0-48c6-873b-d04a1cc9a443.fits  14022043-f0c0-48c6-873b-d04a1cc9a443.json  16150841-8de8-47f6-910d-e38b66c9e7cb.fits  16150841-8de8-47f6-910d-e38b66c9e7cb.json  4cc16ba8-9916-4b20-9505-3cdb83e26831.fits  4cc16ba8-9916-4b20-9505-3cdb83e26831.json  5dc47e61-f6d6-469e-9e87-0091d5e515f9.fits  5dc47e61-f6d6-469e-9e87-0091d5e515f9.json  7b5d82c2-3415-4f23-bcdd-a40d95624176.fits  7b5d82c2-3415-4f23-bcdd-a40d95624176.json  b0a55581-209f-4e08-bf41-9cc1611301e9.fits  b0a55581-209f-4e08-bf41-9cc1611301e9.json  e198868c-556d-40d7-bdd9-8efe9a2ad473.fits  e198868c-556d-40d7-bdd9-8efe9a2ad473.json
docs/: design.md  indi_python_layer.md  network.md  protocol.md  scripting.md
examples/: engine_client.py  monitor.py
indi_engine/: cli.py  config.py  main.py
indi_engine/actions/: __init__.py
indi_engine/frames/: store.py
tests/: test_config.py  test_device_classifier.py  test_indi_client.py  test_nice_to_haves.py  test_parser.py  test_protocol_client.py  test_scripting.py  test_send_commands.py  test_server_manager.py  test_socket_server.py  test_state_manager.py  test_systemd_server_manager.py  test_transport.py
(+29 files in other folders)
