[project]
name = "indi-engine"
version = "0.1.0"
description = "Middleware layer between INDI server and clients"
requires-python = ">=3.13"
dependencies = [
    "pyyaml",
    "RestrictedPython>=7.0",
    "astropy>=6.0",
    "astroquery>=0.4",
    "fitsio>=1.2",
    "numpy>=1.26",
]


[project.scripts]
indi-engine = "indi_engine.main:main"
engine-cli = "indi_engine.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indi_engine"]
